docs/assets/css/custom.css
:root {
    --md-code-font: "JetBrains Mono NL", "LXGW WenKai Screen";
}

.md-nav--secondary .md-nav__title {
    background: rgb(255 255 255 / 0%);
    box-shadow: 0 0 0.4rem 0.4rem rgba(255, 255, 255, 0);
    position: relative;
}

.md-nav--lifted > .md-nav__list > .md-nav__item--active > .md-nav__link {
    background: rgb(255 255 255 / 0%);
    box-shadow: 0 0 0.4rem 0.4rem rgba(255, 255, 255, 0);
    position: relative;
}

.md-nav__list a.is-active {
    color: var(--md-accent-fg-color);
}

.md-nav__item--active > .md-nav:not(:has(> .md-nav__list > .md-nav__item)) {
    display: none;
}

/* light mode */

[data-md-color-scheme="default"] .md-nav__title {
    color: #000;
}

[data-md-color-scheme="default"][data-md-color-primary="brown"] {
    --md-accent-fg-color: #b48a7c;
    --md-accent-fg-color--transparent: #b48a7c1a;
}

/* dark mode */

[data-md-color-primary="black"] .md-header,
[data-md-color-primary="black"] .md-tabs {
    background-color: #1c1c1c;
}

[data-md-color-scheme="slate"][data-md-color-primary="black"] {
    --md-default-bg-color: #161616;
    --md-default-bg-color--light: #161616;
    --md-default-bg-color--lighter: #161616;
    --md-default-bg-color--lightest: #161616;
    --md-default-fg-color: rgba(255, 255, 255, 0.9);
    --md-default-fg-color--light: rgba(255, 255, 255, 0.85);
    --md-default-fg-color--lighter: rgba(255, 255, 255, 0.8);
    --md-default-fg-color--lightest: rgba(255, 255, 255, 0.6);
    --md-primary-fg-color: #0d0d0d;
    --md-typeset-a-color: #d3d3d3;
    --md-footer-fg-color: #fff;
    --md-footer-bg-color: #0d0d0d;
    --md-footer-bg-color--dark: #0d0d0d;
    --md-footer-fg-color--light: #fff;
    --md-footer-fg-color--lighter: #fff;
    --md-code-bg-color: #1d1d1d;
}

/* image border-radius and shadow */

/* img:not([src$=".svg"]) {
    border-radius: 5pt;
    box-shadow: var(--md-shadow-z2);
} */

/* heimu moegirl */

.heimu,
.heimu a,
a .heimu,
.heimu a.new {
    background-color: #252525;
    color: #252525;
    text-shadow: none;
}

.heimu:hover,
.heimu:active,
.heimu:hover .heimu,
.heimu:active .heimu {
    color: white !important;
}

.heimu:hover a,
a:hover .heimu,
.heimu:active a,
a:active .heimu {
    color: lightblue !important;
}

.heimu:hover .new,
.heimu .new:hover,
.new:hover .heimu,
.heimu:active .new,
.heimu .new:active,
.new:active .heimu {
    color: #ba0000 !important;
}

html {
    scroll-behavior: smooth;
}

/* arithmatex */

.md-typeset div.arithmatex > * {
    padding: 0;
}

/* figure */

.md-figure figcaption {
    font-size: 0.85em;
    font-style: normal;
    color: #777;
}

.typst-diagram {
    text-align: center;
}

.typst-diagram img {
    max-width: 100%;
    height: auto;
}

